[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbench"
version = "2.0.0"
description = "Cbench HPC benchmarking framework — Python toolchain"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "jsonschema>=4.0",
]

[project.scripts]
cbench = "cbench.cli.main:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
